fix a route promlem between reviews controller and views file

--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -21,5 +21,5 @@
 </p>
 <% end %>
 <p><a href="/reviews/<%=@book.id%>/new">Add review</a></p>
-<p><a href="/book"> Back to books page </a></p>
+<p><a href="/books"> Back to books page </a></p>
 <a href="/logout">Log out</a>
