--- a/app/views/reviews/new.erb
+++ b/app/views/reviews/new.erb
@@ -1,15 +1,11 @@
+<h2> <%= @book.name %></h2>
+<h3> <%=@book.author %></h3>
+</p>
 <h4> Add a review</h4>
-  <form action="/reviews/<%=@book.id%>" method="POST">
-  <textarea name="content" rows=
-  "9" cols="60"></textarea>
+<form action="/reviews/<%=@book.id%>" method="post">
+<textarea name="content" rows=
+"9" cols="60"></textarea>
 
-  <p> Rate this book:
-  <select name="review">
-  <option selected="selected" value="poor">poor</option>
-  <option selected="selected" value="good">good</option>
-  <option selected="selected" value="excellent">excellent</option>
-  </select>
-   </p>
-   <p><input type="submit" value="Add Comment"></p>
+<p><input type="submit" value="Add Comment"></p>
  </form>
    <a href="/">Home</a>
