modify index page, and add an image to it

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,7 +5,9 @@
   </style>
 <body>
 
-<h1> Welcome to My BOOKSHEILF </h1>
+<h1> Welcome to MY BOOKSHEILF </h1>
        <h2> Books  Reviews Application </h2>
+  <img src="images/bookshelf.jpg" height="300", width="470"/>
+  <br> 
 Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.
 </body>
