--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,11 @@
 <h1>Log In </h1>
 
 <font color="blue">
-
+<h2>
+<% if flash.has?(:alert) %>
+<%= flash[:alert] %>
+<% end %>
+</h2>
 
 <form action="/login" method="post">
 
@@ -13,8 +17,11 @@
 
 <input type="password" name="password" placeholder ="password" id="password"><br>
 
-<input type="submit" value="Log In" id="submit">
+<input type="submit" value="LOG IN" id="submit">
 
 </font>
 
 </form>
+
+<p>Or visit <a href="/signup">Sign Up</a> page</p>
+ <p> Or go back to <a href="/">Home</a> page </p>
