--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,11 @@
 <h1>Log In </h1>
 
 <font color="blue">
-<h2>
-<% if flash.has?(:alert) %>
-<%= flash[:alert] %>
-<% end %>
-</h2>
+#<h2>
+#<% if flash.has?(:alert) %>
+#<%= flash[:alert] %>
+#<% end %>
+#</h2>
 
 <form action="/login" method="post">
 
