--- a/app/views/books/new.erb
+++ b/app/views/books/new.erb
@@ -1,17 +1,17 @@
+
 <body>
- <h1> Add a Book </h1>
+ <h1> ADD A BOOK </h1>
 <form action="/books" method="post">
   <lable for="POST-name">Title:</lable>
   <input id="POST-name" type="text" name="book_name">
   <lable for="POST-name">Author:</lable>
   <input id="POST-name" type="text" name="book_author">
-  <lable for="POST-name">Genre:</lable>
-  <input id="POST-name" type="text" name="book_genre">
+  
   <input type="submit" value="Add a Book">
   </form>
   
   <br>
 
-<p> <a href="/">Home</a> </p>
-<a href="/logout">Log out</a>
+<p> <a href="/">HOME</a> </p>
+<a href="/logout">LOG OUT</a>
 </body>
