--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,11 @@
-<h1>Log In </h1>
+<h1>LOG IN </h1>
 
 <font color="blue">
-#<h2>
-#<% if flash.has?(:alert) %>
-#<%= flash[:alert] %>
-#<% end %>
-#</h2>
+<h2>
+<% if flash.has?(:alert) %>
+<%= flash[:alert] %>
+<% end %>
+</h2>
 
 <form action="/login" method="post">
 
@@ -23,5 +23,5 @@
 
 </form>
 
-<p>Or visit <a href="/signup">Sign Up</a> page</p>
- <p> Or go back to <a href="/">Home</a> page </p>
+<p>Or visit <a href="/signup">SIGN UP</a> page</p>
+ <p> Or go back to <a href="/">HOME</a> page </p>
