--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -23,5 +23,5 @@
 </font>
 
 </form>
-<p>Or visit <a href="/login">Log in</a> page</p>
-<p> Or go back to <a href="/">Home</a> page </p>
+<p>Or visit <a href="/login">LOG IN</a> page</p>
+<p> Or go back to <a href="/">HOME</a> page </p>
