--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -5,9 +5,9 @@
   </style>
 <body>
 
-<h1> Welcome to MY BOOKSHEILF </h1>
+<h1> WELCOME MY BOOKSHEILF! </h1>
        <h2> Books  Reviews Application </h2>
   <img src="images/bookshelf.jpg" height="300", width="470"/>
   <br> 
-Please <a href="/signup">Sign Up</a> or <a href="/login">Log In</a> to continue.
+Please <a href="/signup">SIGN UP</a> or <a href="/login">LOG IN</a> to continue.
 </body>
