--- a/app/views/reviews/new.erb
+++ b/app/views/reviews/new.erb
@@ -1,7 +1,11 @@
 <h2>
-  <% if flash.has?(:alert) %>
-  <%= flash[:alert] %>
- <% end %>
+<font color="red">
+<p style="font-size:20px">
+<% if flash.has?(:alert) %>
+<%= flash[:alert] %>
+<% end %>
+
+</font>
   </h2>
   
   
